--- a/deploy/helm/ingestion-pipeline/templates/notebook.yaml
+++ b/deploy/helm/ingestion-pipeline/templates/notebook.yaml
@@ -60,12 +60,17 @@ spec:
                 secretKeyRef:
                   name: rag-pipeline-secrets
                   key: LLAMASTACK_BASE_URL
+            - name: DS_PIPELINE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rag-pipeline-secrets
+                  key: DS_PIPELINE_URL
             - name: NOTEBOOK_ARGS
               value: |-
                 --ServerApp.port=8888
                 --ServerApp.token=''
                 --ServerApp.password=''
-                --ServerApp.base_url=/notebook/{{ .Values.namespace }}/rag-pipeline-notebook
+                --ServerApp.base_url=/notebook/{{ .Release.Namespace }}/rag-pipeline-notebook
                 --ServerApp.quit_button=False
                 --ServerApp.tornado_settings={"user":"user1","hub_host":"","hub_prefix":"/projects/{{ .Values.namespace }}"}
             - name: JUPYTER_IMAGE
