--- a/deploy/helm/rag-ui/values-gpu.yaml
+++ b/deploy/helm/rag-ui/values-gpu.yaml
@@ -13,9 +13,9 @@ global:
         - --max-model-len
         - "30544"
       llamaStack:
-        modelIdEnvName: LLAMA_INSTRUCT_MODEL
+        modelIdEnvName: LLAMA_INSTRUCT3B_MODEL
         modelUrl:
-          envName: LLAMA_INSTRUCT_VLLM_URL
+          envName: LLAMA_INSTRUCT3B_VLLM_URL
           envValue: auto
     llama-guard-3-8b:
       id: meta-llama/Llama-Guard-3-8B
@@ -25,11 +25,64 @@ global:
         - --max-model-len
         - "14336"
       llamaStack:
-        modelIdEnvName: LLAMA_GUARD_MODEL
+        modelIdEnvName: LLAMA_GUARD8B_MODEL
         modelUrl:
-          envName: LLAMA_GUARD_VLLM_URL
+          envName: LLAMA_GUARD8B_VLLM_URL
           envValue: auto
         registerShield: true
+    llama-3-2-1b-instruct:
+      id: meta-llama/Llama-3.2-1B-Instruct
+      enabled: false
+      inferenceService:
+        args:
+        - --enable-auto-tool-choice
+        - --chat-template
+        - /vllm-workspace/examples/tool_chat_template_llama3.2_json.jinja
+        - --tool-call-parser
+        - llama3_json
+        - --max-model-len
+        - "30544"
+      llamaStack:
+        modelIdEnvName: LLAMA_INSTRUCT1B_MODEL
+        modelUrl:
+          envName: LLAMA_INSTRUCT1B_VLLM_URL
+          envValue: auto
+    llama-guard-3-1b:
+      id: meta-llama/Llama-Guard-3-1B
+      enabled: false
+      inferenceService:
+        args:
+        - --max-model-len
+        - "14336"
+      llamaStack:
+        modelIdEnvName: LLAMA_GUARD1B_MODEL
+        modelUrl:
+          envName: LLAMA_GUARD1B_VLLM_URL
+          envValue: auto
+        registerShield: true
+    llama-3-1-70b-instruct:
+      id: meta-llama/Llama-3.1-70B-Instruct
+      enabled: false
+      inferenceService:
+        args:
+        - --gpu-memory-utilization
+        - "0.95"
+        - --quantization
+        - fp8
+        - --max-num-batched-tokens
+        - "4096"
+        - --enable-auto-tool-choice
+        - --chat-template
+        - /vllm-workspace/examples/tool_chat_template_llama3.1_json.jinja
+        - --tool-call-parser
+        - llama3_json
+        - --port
+        - "8000"
+      llamaStack:
+        modelIdEnvName: LLAMA_INSTRUCT70B_MODEL
+        modelUrl:
+          envName: LLAMA_INSTRUCT70B_VLLM_URL
+          envValue: auto
 
 llm-service:
   servingRuntime:
