--- a/deploy/helm/rag-ui/values-gpu.yaml
+++ b/deploy/helm/rag-ui/values-gpu.yaml
@@ -13,10 +13,8 @@ global:
         - --max-model-len
         - "30544"
       llamaStack:
-        modelIdEnvName: LLAMA_INSTRUCT3B_MODEL
-        modelUrl:
-          envName: LLAMA_INSTRUCT3B_VLLM_URL
-          envValue: auto
+        url: auto
+
     llama-guard-3-8b:
       id: meta-llama/Llama-Guard-3-8B
       enabled: false
@@ -25,11 +23,9 @@ global:
         - --max-model-len
         - "14336"
       llamaStack:
-        modelIdEnvName: LLAMA_GUARD8B_MODEL
-        modelUrl:
-          envName: LLAMA_GUARD8B_VLLM_URL
-          envValue: auto
+        url: auto
         registerShield: true
+
     llama-3-2-1b-instruct:
       id: meta-llama/Llama-3.2-1B-Instruct
       enabled: false
@@ -43,10 +39,8 @@ global:
         - --max-model-len
         - "30544"
       llamaStack:
-        modelIdEnvName: LLAMA_INSTRUCT1B_MODEL
-        modelUrl:
-          envName: LLAMA_INSTRUCT1B_VLLM_URL
-          envValue: auto
+        url: auto
+
     llama-guard-3-1b:
       id: meta-llama/Llama-Guard-3-1B
       enabled: false
@@ -55,11 +49,9 @@ global:
         - --max-model-len
         - "14336"
       llamaStack:
-        modelIdEnvName: LLAMA_GUARD1B_MODEL
-        modelUrl:
-          envName: LLAMA_GUARD1B_VLLM_URL
-          envValue: auto
+        url: auto
         registerShield: true
+
     llama-3-3-70b-instruct:
       id: meta-llama/Llama-3.3-70B-Instruct
       enabled: false
@@ -85,10 +77,7 @@ global:
         - --swap-space
         - "32"
       llamaStack:
-        modelIdEnvName: LLAMA_INSTRUCT70B_MODEL
-        modelUrl:
-          envName: LLAMA_INSTRUCT70B_VLLM_URL
-          envValue: auto
+        url: auto
 
 llm-service:
   servingRuntime:
