--- a/deploy/helm/llm-service/templates/model-pvc.yaml
+++ b/deploy/helm/llm-service/templates/model-pvc.yaml
@@ -1,4 +1,4 @@
-{{- range $key, $model := .Values.global.models }}
+{{- range $key, $model := .Values.models }}
 {{- if $model.enabled }}
 ---
 kind: PersistentVolumeClaim
