Manage pgvector secret as part of Helm chart
For automated deployment scenarios, it is preferable for all Kubernetes
resources to be managed as part of a Helm chart rather than imperatively
in the Makefile.

This PR moves the pgvector secret into the pgvector subchart and populates
it with the existing default values. The user is able to set the values
via Helm overrides, or by setting environment variables when deploying
via the Makefile (as is already currently possible).

Signed-off-by: Caleb Xu <caxu@redhat.com>

--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -78,16 +78,6 @@ secrets:
 			oc create secret -n $(NAMESPACE) generic huggingface-secret --from-literal=HF_TOKEN="$$HF_TOKEN" --dry-run=client -o yaml | oc apply -f -'; \
 	}
 
-	@oc get secret -n $(NAMESPACE) pgvector 2>/dev/null || { \
-		echo "Creating pgvector secret"; \
-		oc create secret -n $(NAMESPACE) generic pgvector \
-			--from-literal=username="$(POSTGRES_USER)" \
-			--from-literal=password="$(POSTGRES_PASSWORD)" \
-			--from-literal=host=pgvector \
-			--from-literal=port=5432 \
-			--from-literal=dbname="$(POSTGRES_DBNAME)"; \
-	}
-
 	@oc get secret -n $(NAMESPACE) minio 2>/dev/null || { \
 		echo "Creating minio secret"; \
 		oc create secret -n $(NAMESPACE) generic minio \
@@ -99,7 +89,6 @@ secrets:
 
 	@echo "Annotating secrets..."
 	oc annotate secret huggingface-secret -n $(NAMESPACE) meta.helm.sh/release-name=$(RELEASE_NAME) meta.helm.sh/release-namespace=$(NAMESPACE) --overwrite
-	oc annotate secret pgvector -n $(NAMESPACE) meta.helm.sh/release-name=rag meta.helm.sh/release-namespace=$(NAMESPACE)
 	oc annotate secret minio -n $(NAMESPACE) meta.helm.sh/release-name=rag meta.helm.sh/release-namespace=$(NAMESPACE)
 
 .PHONY: pg-vector
@@ -163,6 +152,9 @@ install-llm-service-%: namespace secrets
 install-llm-service: install-llm-service-gpu
 
 helm_llama_stack_args = \
+    --set pgvector.secret.user=$(POSTGRES_USER) \
+    --set pgvector.secret.password=$(POSTGRES_PASSWORD) \
+    --set pgvector.secret.dbname=$(POSTGRES_DBNAME) \
     $(if $(LLM),--set-json llama-stack.models.$(LLM).enabled='true',) \
     $(if $(SAFETY),--set-json llama-stack.models.$(SAFETY).enabled='true',) \
     $(if $(LLM_URL),--set-json llama-stack.models.$(LLM).url='"$(LLM_URL)"',) \
@@ -257,9 +249,6 @@ remove-secrets:
 
 	@echo "Removing Hugging Face secret..."
 	oc delete secret -n $(NAMESPACE) huggingface-secret || echo "Secret not found or already removed."
-
-	@echo "Removing pgvector secret"
-	oc delete secret -n $(NAMESPACE) pgvector || echo "Secret not found or already removed."
 
 	@echo "Removing minio secret"
 	oc delete secret -n $(NAMESPACE) minio || echo "Secret not found or already removed."
