--- a/ui/Containerfile
+++ b/ui/Containerfile
@@ -1,11 +1,14 @@
 # More info on playground configuration can be found here:
 # https://llama-stack.readthedocs.io/en/latest/playground
 
-FROM python:3.10-slim
+FROM python:3.12-slim
 WORKDIR /app
 COPY . /app/
 RUN /usr/local/bin/python -m pip install --upgrade pip && \
     /usr/local/bin/pip3 install -r requirements.txt
+
+RUN cp -a /app/* $(python -c "import site; print(site.getsitepackages()[0])")/llama_stack/distribution/ui
+
 EXPOSE 8501
 
 ENTRYPOINT ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
