--- a/deploy/helm/llm-service/values-gpu.yaml
+++ b/deploy/helm/llm-service/values-gpu.yaml
@@ -76,3 +76,25 @@ models:
       - llama3_json
       - --swap-space
       - "32"
+      
+  llama-3-2-1b-instruct-quantized:
+    id: RedHatAI/Llama-3.2-1B-Instruct-quantized.w8a8
+    enabled: false
+    inferenceService:
+      args:
+      - --gpu-memory-utilization
+      - “0.4”
+      - --quantization
+      - compressed-tensors
+      - --enable-auto-tool-choice
+      - --chat-template
+      - /vllm-workspace/examples/tool_chat_template_llama3.2_json.jinja
+      - --tool-call-parser
+      - llama3_json
+      - --max-model-len
+      - “30544"
+    llamaStack:
+      modelIdEnvName: LLAMA_INSTRUCT1B_QUANT_MODEL
+      modelUrl:
+        envName: LLAMA_INSTRUCT1B_QUANT_VLLM_URL
+        envValue: auto
